Documentation - Atmoic design / file structure

--- a/web/themes/oc_patterns/components/_patterns/00-base/global/05-macros/macros.twig
+++ b/web/themes/oc_patterns/components/_patterns/00-base/global/05-macros/macros.twig
@@ -117,10 +117,10 @@
 <div class="macro-tile">
 <p><strong>FOOTER STYLE</strong></br>
 	VARIABLES= fixed, not-fixed</br>
-	Current= fixed
+	Current= not-fixed
 </p>
 </div>
-{% macro fixedFooter() %}fixed{% endmacro %}
+{% macro fixedFooter() %}not-fixed{% endmacro %}
 
 
 
