--- a/web/themes/oc_patterns/components/_patterns/documentation/03-theme-file-structure/00-atomic-order.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/03-theme-file-structure/00-atomic-order.twig
@@ -2,6 +2,86 @@
 
 <div class="doc-text">
 	<p>Atomic design overview, how oc pattern files are ordered.</p>
+	<div class="doc-section">
+		<h4 class="doc-section-title">Atomic Design Principles</h4>
+		<div class="doc-section-inner">
+			<p>OC Patterns is an uses an <a href="http://patternlab.io/" target="_blank">atomic design</a> approach to theming. Atomic design is a system for developing a component-based design from the smallest element to the largest.</p>
+			<p>
+				<strong>The Atomic Order:</strong></br>
+				<ul>
+					<li>Atoms</li>
+					<li>Molecules</li>
+					<li>Organisms</li>
+					<li>Templates</li>
+					<li>Pages</li>
+				</ul>
+			</p>
+			<p>This theme defines global elements like color, fonts, macros and mixins, and builds them into text, links, icons, buttons, etc. These elements are built into blocks and menus. More advanced elements are widgets and the site header and footer. Everything is combined at end into layouts, pages and nodes.</p>
+		</div>
+	</div>
+	<div class="doc-section">
+		<h4 class="doc-section-title">OC Patterns Atomic File Structure</h4>
+		<div class="doc-section-inner">
+			<p>
+				<strong>The OC Atomic Order:</strong></br>
+				<ul class="spaced two-col-vert">
+					<li>Global
+						<ol type="A">
+							<li>Colors</li>
+							<li>Fonts</li>
+							<li>Grid</li>
+							<li>Mixins</li>
+							<li>Macros</li>
+							<li>Layouts</li>
+							<li>Global Scss files</li>
+						</ol>
+					</li>
+					<li>Atoms
+						<ol type="A">
+							<li>Links</li>
+							<li>Text</li>
+							<li>Lists</li>
+							<li>Images</li>
+							<li>Forms</li>
+							<li>Buttons</li>
+							<li>Tables</li>
+						</ol>
+					</li>
+					<li>Molecules
+						<ol type="A">
+							<li>Blocks</li>
+							<li>Card</li>
+							<li>Menus</li>
+							<li>Pagers</li>
+						</ol>
+					</li>
+					<li>Organisms
+						<ol type="A">
+							<li>Card Grid</li>
+							<li>Widgets (paragraphs)</li>
+							<li>Site (header & Footer)</li>
+						</ol>
+					</li>
+					<li>Pages
+						<ol type="A">
+							<li>Layouts</li>
+							<li>Nodes</li>
+							<li>Search</li>
+							<li>Taxonomy</li>
+							<li>Pages.scss (custom, non-panelizer, front pages)</li>
+						</ol>
+					</li>
+					<li>Site Wide
+						<ol type="A">
+							<li>Global High Level</li>
+							<li>Drupal Base Elements (media, views, etc)</li>
+							<li>Styleguide-specfic.scss</li>
+						</ol>
+					</li>
+				</ul>
+			</p>
+		</div>
+	</div>
 </div>
 
 
