--- a/web/themes/oc_patterns/components/_patterns/documentation/09-drupal-integration/03-drupal-theme-debugging.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/09-drupal-integration/03-drupal-theme-debugging.twig
@@ -1,5 +1,5 @@
 <a name="drupal-theme-debug" id="drupal-theme-debug"></a>
 
 <div class="doc-text">
-	<p>Services yml (gitignore), devel, kint, (including context keys trick)</p>
+	<p>Services yml (gitignore), devel, kint, (including context keys trick), dd() -- faster than kint but dont get attributes</p>
 </div>
