--- a/web/themes/oc_patterns/components/_patterns/documentation/03-theme-file-structure/01-file-types.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/03-theme-file-structure/01-file-types.twig
@@ -2,6 +2,27 @@
 
 <div class="doc-text">
 	<p>File types and what they do in pl--some base syntax for each type</p>
+	<div class="doc-section">
+		<h4 class="doc-section-title">Pattern Lab File Types</h4>
+		<div class="doc-section-inner">
+			<p>Pattern Lab components are made up of several file types:</p>
+			<p>
+				<ul>
+					<li>SCSS</li>
+					<li>JS</li>
+					<li>TWIG</li>
+					<li>YML</li>
+					<li>MD</li>
+				</ul>
+			</p>
+			<p><strong>SCSS— </strong>SCSS files hold the SASS theming code that gets compiled into CSS for the site. <strong>SCSS files should never be visible to Pattern Lab and thus should always be preceded by an _.</strong> Each component generally gets its own .scss file even if it doesn't need any of the other file types. Some .scss files hold because they theme at a slightly higher level (example: _widgets.scss).</p>
+			<p><strong>JS— </strong>JS files hold th Jquery scripts for the site. Most JS files should be hidden from Pattern Lab unless they are needed to test/demonstration specific component functionality. <strong>NOTE:</strong> Even if a JS file is visible to Pattern Lab, it will not be functional. It must also be included in theme/components/_meta/_01-foot.twig, assigned to a library in the theme's .libraries.yml and attached in a Twig template.</p>
+			<p>JS files are attached to Twig templates (both in Drupal and Pattern Lab) through the {{ attach_library() }} Twig function. When a JS file is assigned to a library, it should also have its specific dependencies assigned.</p>
+			<p><strong>TWIG— </strong></p>
+			<p><strong>YML— </strong></p>
+			<p><strong>MD— </strong></p>
+		</div>
+	</div>
 </div>
 
 
