--- a/web/themes/oc_patterns/components/_patterns/00-base/global/01-colors/_color-vars.scss
+++ b/web/themes/oc_patterns/components/_patterns/00-base/global/01-colors/_color-vars.scss
@@ -43,3 +43,7 @@ $activeLink : #6a2600;
 $hoverLink  : #6a2600;
 $buttonBack : #efb61b;
 $buttonBackHover: #c84700; 
+
+
+//PL colors
+$codeString   :  #017aa2;
