--- a/web/themes/oc_patterns/components/_patterns/05-sitewide/_styleguide-specific.scss
+++ b/web/themes/oc_patterns/components/_patterns/05-sitewide/_styleguide-specific.scss
@@ -355,6 +355,14 @@
 		}
 	}
 
+	span.code{
+		color: $codeString;
+	}
+
+	p.subtext{
+		padding-left: 60px;
+		@include smaller;
+	}
 	
 }//end pl
 
