--- a/web/themes/oc_patterns/components/_patterns/documentation/00-table-of-contents/00-sections.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/00-table-of-contents/00-sections.twig
@@ -14,6 +14,7 @@
 	<li><h5>Running the Theme</h5>
 		<ol type="A">
 			<li><a href="#npm-start">NPM Based Theming</a></li>
+			<li><a href="#pl-non-pl-files">PL & Non-PL Files</a></li>
 			<li><a href="#pl-file-changes">Adding & Removing PL Files</a></li>
 		</ol>
 	</li>
@@ -81,6 +82,7 @@
 
 	<li><h5>Custom Templates</h5>
 		<ol type="A">
+			<li><a href="#custom-templates">Customizing Templates</a></li>
 			<li><a href="#templates-naming">Naming Conventions & File Location</a></li>
 			<li><a href="#templates-twig">Twig Overview</a></li>
 			<li><a href="#templates-layouts">New Layouts / Regions</a></li>
