--- a/web/themes/oc_patterns/components/_patterns/03-organisms/02-widgets/text/_text.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/02-widgets/text/_text.scss
@@ -10,10 +10,7 @@
 	.two-column{
 		@include tab{
 			.field-oc-long-text{
-				//from 01-mixins.scss
-				@include columnCount(2);
-				//from 01-mixins.scss
-				@include columnGap(2em);
+				@include columns(2, 2em);
 			}
 		}
 	}
