--- a/web/themes/oc_patterns/components/_patterns/documentation/02-running-the-theme/01-pl-&-non-pl-files.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/02-running-the-theme/01-pl-&-non-pl-files.twig
@@ -5,6 +5,7 @@
 	<div class="doc-section">
 		<h4 class="doc-section-title">Theme Root Files</h4>
 		<div class="doc-section-inner">
+			<p><strong>.stylelintrc—</strong> Sets Sass lint rules.</p>
 			<p><strong>gulpfile.js—</strong> Requires both the local.gulp-config.js file and the Emulsify Gulp npm package in order to define gulp tasks to run the theme.</p>
 			<p><strong>local.gulp-config.js—</strong> Overwrites gulp tasks from the default Emulsify Gulp npm package and holds any new custom OC Patterns gulp tasks.</p>
 			<p><strong>logo.svg—</strong> Sets the site logo that appears in the header.</p>
