--- a/web/themes/oc_patterns/components/_patterns/documentation/06-sass/01-mixins-&-placeholders.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/06-sass/01-mixins-&-placeholders.twig
@@ -21,7 +21,7 @@
 		<div class="doc-section-inner">
 			<p>Most mixins are defined in 00-base/_02-mixins.scss. Background mixins are defined in 00-base/_03_background-sizes.scss and breakpoint mixins are set in 00-base/_00-breakpoints.scss. Some other more specific mixins are set in their respective component Scss files (example: <span class="code">@mixin blockTitle{}</span> set in 01-atoms/02-text/00-headings/_headings.scss).</p>
 			<p>All mixins set in the theme should be listed as a mixin-tile in 00-base/global/04-mixins/mixins.twig so that there is a visual Pattern Lab reference for them. The mixin tile should give the mixin name, the @include call for it, a short description, any argument values needed, and a list of similar mixins (similar mixins do not need to have a tile for each).</p>
-			<p>A new mixin should be created anytime a piece of Scss is being reused in multiple files of the theme and there are contextual variables being set in each instance. <br>Example:<br><span class="code">@mixin columns($columns, $gap){<br>-webkit-column-count: #{$columns};<br>-moz-column-count: #{$columns};<br>column-count: #{$columns};<br>-webkit-column-gap: #{$gap};<br>-moz-column-gap: #{$gap};<br>column-gap: #{$gap};<br>}</span>
+			<p>A new mixin should be created anytime a piece of Scss is being reused in multiple files of the theme and there are contextual variables being set in each instance. <br>Example:<br><span class="code">@mixin columns($columns, $gap){<br>-webkit-column-count: #{$columns};<br>-moz-column-count: #{$columns};<br>column-count: #{$columns};<br>-webkit-column-gap: #{$gap};<br>-moz-column-gap: #{$gap};<br>column-gap: #{$gap};<br>}</span></p>
 		</div>
 	</div>
 	<div class="doc-section">
