--- a/web/themes/oc_patterns/components/_patterns/documentation/06-sass/03-sass-best-practices.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/06-sass/03-sass-best-practices.twig
@@ -19,6 +19,7 @@
 			<p><strong>Mixin, Mixin, Mixin—</strong> Use mixins and placeholders whenever you find yourself repeating the same Scss code in more than a few spots. Mixins with arguments can definitely help your efficency while placeholders help keep the CSS lean. View defined mixins and placeholders in the Base > Global > Mixins Reference sheet. <strong>Whenever you create a new mixin, make sure you add a mixin tile for it in 00-base/04-mixins/mixins.twig so that it because visible in the mixins reference sheet.</strong></p>
 			<p>In order for a mixin to be used in a file, the mixin must be assigned in the file hierarchy before it is called in a file. This is why the 01-mixins.scss is one of the first top level files in the theme. Any file that uses placeholders that are defined in 01-placeholders.scss must import the 01-placeholders.scss file.</p>
 			<p><strong>Variables—</strong> All colors, grid sizes and fonts should be assigned to a variable. Mixins should take advantage of argument variables whenever their is a contextual need (like setting a different height for the vertRule mixin in different uses). If a mixin does not use an argument, it should probably be a placeholder.</p>
+			<p><strong>Camel Casing—</strong> When creating mixins, placeholders, or variables, always use camelCasing instead of hyphens or underscores.</p>
 		</div>
 	</div>
 </div>
