PL JS Documentation

--- a/web/themes/oc_patterns/components/_patterns/documentation/02-running-the-theme/01-pl-&-non-pl-files.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/02-running-the-theme/01-pl-&-non-pl-files.twig
@@ -12,7 +12,7 @@
 			<p><strong>oc_patterns.breakpoints.yml—</strong> Defines the OC Patterns custom breakpoint widths and 1x & 2x multipliers for responsive image styles.</p>
 			<p><strong>oc_pattern.info.yml</strong> Outlines all the theme information and sets the block layout regions and Pattern Lab component top level folders that can be inherited into Drupal.</p>
 			<p><strong>oc_patterns.layouts.yml—</strong> Defines the custom OC Patterns templates and their regions.</p>
-			<p><strong>oc_patterns.libraries.yml—</strong> Sets the libraries that can be attached to Twig templates in Drupal. (Fonts, CSS, JS)</p>
+			<p><strong>oc_patterns.libraries.yml—</strong> Sets the libraries that can be attached to Twig templates in Drupal. (Fonts, CSS, JS) <strong>External libraries added here should be brought in through CDN whenever possible.</strong></p>
 			<p><strong>oc_patterns.theme—</strong> Provides theme level php functions and hooks.</p>
 			<p><strong>package-lock.json—</strong> Automatic file generated from package.json on <span class="code">npm install</span>. Defines all package dependencies.</p>
 			<p><strong>package.json—</strong> Assigns dependencies and npm scripts for the theme.</p>
