--- a/web/themes/oc_patterns/components/_patterns/documentation/14-additional-resources/00-quick-reference.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/14-additional-resources/00-quick-reference.twig
@@ -8,6 +8,7 @@
 		<li>Bringing Templates from Pattern Lab to Drupal</li>
 		<li>Getting Pattern Lab to pick up new Scss/JS/Twig files.</li>
 		<li>Breakpoints for Responsive Image Styles</li>
+		<li>Adding new JS files/libraries</li>
 	</ul>
 </div>
 
