--- a/web/themes/oc_patterns/components/_patterns/documentation/08-accessibility/00-accessibility-overview.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/08-accessibility/00-accessibility-overview.twig
@@ -1,6 +1,22 @@
 <a name="access-overview" id="access-overview"></a>
 
 <div class="doc-text">
-	<p>What is web accessibility, why its important-especially to our clients, what we focus on.</p>
+	<div class="doc-section">
+		<h4 class="doc-section-title">Web Accessibility</h4>
+		<div class="doc-section-inner">
+			<p><a href="https://www.w3.org/standards/webdesign/accessibility" target="_blank">Web Accessibility</a> is a huge push in modern web development and design. The web should be equally accessible to all people—no matter they ability or disability. OC Patterns strives to make every site as accessible as possible.</p>
+			<p>Since Electric Citizen works primarily in the public and university sector—accessibility double important to both us and our clients. We are constantly striving for improvement in any area of accessiblity.</p>
+			<p>
+				<h5>Key Development Areas for Accessibility:</h5>
+				<ul>
+					<li>Color Contrast</li>
+					<li>Aria elements</li>
+					<li>Image Alt Tags</li>
+					<li>Keyboard Accessiblity for all menus, links, buttons, expanding elements</li>
+					<li>Jump Link for main content and menus</li>
+				</ul>
+			</p>
+		</div>
+	</div>
 </div>
 
