--- a/web/themes/oc_patterns/components/_patterns/documentation/09-drupal-integration/00-drupal-overview.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/09-drupal-integration/00-drupal-overview.twig
@@ -1,6 +1,11 @@
 <a name="drupal-overview" id="drupal-overview"></a>
 
 <div class="doc-text">
-	<p>Patterns is a drupal theme but pattern lab is not drupal specific, Twig vs html.twig.</p>
+	<div class="doc-section">
+		<h4 class="doc-section-title"></h4>
+		<div class="doc-section-inner">
+			<p></p>
+		</div>
+	</div>
 </div>
 
