--- a/web/themes/oc_patterns/components/_patterns/documentation/09-drupal-integration/01-template-inheritance.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/09-drupal-integration/01-template-inheritance.twig
@@ -2,5 +2,11 @@
 
 <div class="doc-text">
 	<p>Inheritance overview, types of inheritance, blocks usage, comments</p>
+	<div class="doc-section">
+		<h4 class="doc-section-title"></h4>
+		<div class="doc-section-inner">
+			<p></p>
+		</div>
+	</div>
 </div>
 
