--- a/web/themes/oc_patterns/components/_patterns/documentation/09-drupal-integration/02-drupal-theme-debugging.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/09-drupal-integration/02-drupal-theme-debugging.twig
@@ -2,4 +2,10 @@
 
 <div class="doc-text">
 	<p>Services yml (gitignore), devel, kint, (including context keys trick), dd() -- faster than kint but dont get attributes</p>
+	<div class="doc-section">
+		<h4 class="doc-section-title"></h4>
+		<div class="doc-section-inner">
+			<p></p>
+		</div>
+	</div>
 </div>
