--- a/web/themes/oc_patterns/components/_patterns/documentation/10-custom-templates/00-custom-templates.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/10-custom-templates/00-custom-templates.twig
@@ -2,6 +2,12 @@
 
 <div class="doc-text">
 	<p>new custom templates, customizing a default theme template, customizing a module or core template</p>
+	<div class="doc-section">
+		<h4 class="doc-section-title"></h4>
+		<div class="doc-section-inner">
+			<p></p>
+		</div>
+	</div>
 </div>
 
 
