--- a/web/themes/oc_patterns/components/_patterns/documentation/10-custom-templates/02-twig-overview.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/10-custom-templates/02-twig-overview.twig
@@ -2,6 +2,12 @@
 
 <div class="doc-text">
 	<p>Generalities, link to my blog posts, some tips and tricks (maybe), commenting</p>
+	<div class="doc-section">
+		<h4 class="doc-section-title"></h4>
+		<div class="doc-section-inner">
+			<p></p>
+		</div>
+	</div>
 </div>
 
 
