--- a/web/themes/oc_patterns/components/_patterns/documentation/10-custom-templates/03-new-layouts-regions.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/10-custom-templates/03-new-layouts-regions.twig
@@ -2,6 +2,12 @@
 
 <div class="doc-text">
 	<p>Templates drupal file location, layouts.yml, inheritance from twig, icons (where to find icons ai file), oc_patterns layouts vs global block regions. Some guides as to when to add new regions / layouts.</p>
+	<div class="doc-section">
+		<h4 class="doc-section-title"></h4>
+		<div class="doc-section-inner">
+			<p></p>
+		</div>
+	</div>
 </div>
 
 
