--- a/web/themes/oc_patterns/components/_patterns/documentation/11-per-site-customization/01-logo-&-favicon.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/11-per-site-customization/01-logo-&-favicon.twig
@@ -2,6 +2,12 @@
 
 <div class="doc-text">
 	<p>Should always be svgs. Favicon generator and integrating with html.html.twig in headerInsert block. Getting the logo to actually update.</p>
+	<div class="doc-section">
+		<h4 class="doc-section-title"></h4>
+		<div class="doc-section-inner">
+			<p></p>
+		</div>
+	</div>
 </div>
 
 
