--- a/web/themes/oc_patterns/components/_patterns/documentation/12-admin-theming/00-oc-custom-modules.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/12-admin-theming/00-oc-custom-modules.twig
@@ -2,6 +2,12 @@
 
 <div class="doc-text">
 	<p>Custom module fuctions & file setup. CSS instead of Sass, global vs node files</p>
+	<div class="doc-section">
+		<h4 class="doc-section-title"></h4>
+		<div class="doc-section-inner">
+			<p></p>
+		</div>
+	</div>
 </div>
 
 
