--- a/web/themes/oc_patterns/components/_patterns/documentation/12-admin-theming/02-wysiwyg-styles.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/12-admin-theming/02-wysiwyg-styles.twig
@@ -2,6 +2,12 @@
 
 <div class="doc-text">
 	<p>Adding new styles, cke stylesheet, clearing cache and getting them to show up.</p>
+	<div class="doc-section">
+		<h4 class="doc-section-title"></h4>
+		<div class="doc-section-inner">
+			<p></p>
+		</div>
+	</div>
 </div>
 
 
