--- a/web/themes/oc_patterns/components/_patterns/documentation/13-miscellaneous/00-dev-content-config.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/13-miscellaneous/00-dev-content-config.twig
@@ -2,6 +2,12 @@
 
 <div class="doc-text">
 	<p>dev specific config, getting deve specific config into a local to export back to dev, makign sure that no one else is working on the site when do it.</p>
+	<div class="doc-section">
+		<h4 class="doc-section-title"></h4>
+		<div class="doc-section-inner">
+			<p></p>
+		</div>
+	</div>
 </div>
 
 
