--- a/web/themes/oc_patterns/components/_patterns/documentation/13-miscellaneous/01-working-with-git.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/13-miscellaneous/01-working-with-git.twig
@@ -2,6 +2,12 @@
 
 <div class="doc-text">
 	<p>repo branches, pulling and pushing, always use readme for each repo, tower, commit comments</p>
+	<div class="doc-section">
+		<h4 class="doc-section-title"></h4>
+		<div class="doc-section-inner">
+			<p></p>
+		</div>
+	</div>
 </div>
 
 
