--- a/web/themes/oc_patterns/components/_patterns/documentation/09-drupal-integration/03-drupal-best-practices.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/09-drupal-integration/03-drupal-best-practices.twig
@@ -2,6 +2,12 @@
 
 <div class="doc-text">
 	<p>When to bring files into drupal / when to drupal in pl (for new site elements)</p>
+	<div class="doc-section">
+		<h4 class="doc-section-title"></h4>
+		<div class="doc-section-inner">
+			<p></p>
+		</div>
+	</div>
 </div>
 
 
