--- a/web/themes/oc_patterns/components/_patterns/documentation/10-custom-templates/01-naming-conventions-&-file-location.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/10-custom-templates/01-naming-conventions-&-file-location.twig
@@ -2,6 +2,12 @@
 
 <div class="doc-text">
 	<p>heirarchy/specificity levels, customizing a theme template, where custom templates go and why</p>
+	<div class="doc-section">
+		<h4 class="doc-section-title"></h4>
+		<div class="doc-section-inner">
+			<p></p>
+		</div>
+	</div>
 </div>
 
 
