--- a/web/themes/oc_patterns/components/_patterns/documentation/11-per-site-customization/00-site-specific-colors-&-fonts.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/11-per-site-customization/00-site-specific-colors-&-fonts.twig
@@ -2,6 +2,12 @@
 
 <div class="doc-text">
 	<p>why we run them separate from others (why the colors_used is not used), why always variables.</p>
+	<div class="doc-section">
+		<h4 class="doc-section-title"></h4>
+		<div class="doc-section-inner">
+			<p></p>
+		</div>
+	</div>
 </div>
 
 
