--- a/web/themes/oc_patterns/components/_patterns/documentation/11-per-site-customization/02-new-elements.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/11-per-site-customization/02-new-elements.twig
@@ -2,6 +2,12 @@
 
 <div class="doc-text">
 	<p>Where the files go, does the element need a pl twig file?</p>
+	<div class="doc-section">
+		<h4 class="doc-section-title"></h4>
+		<div class="doc-section-inner">
+			<p></p>
+		</div>
+	</div>
 </div>
 
 
