--- a/web/themes/oc_patterns/components/_patterns/documentation/12-admin-theming/01-paragraph-icons.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/12-admin-theming/01-paragraph-icons.twig
@@ -2,6 +2,12 @@
 
 <div class="doc-text">
 	<p>Location of icons files in gdrive, custom node theming for new widget icons, dev config (link to dev-config section).</p>
+	<div class="doc-section">
+		<h4 class="doc-section-title"></h4>
+		<div class="doc-section-inner">
+			<p></p>
+		</div>
+	</div>
 </div>
 
 
