--- a/web/themes/oc_patterns/components/_patterns/documentation/14-additional-resources/00-quick-reference.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/14-additional-resources/00-quick-reference.twig
@@ -2,14 +2,19 @@
 
 <div class="doc-text">
 	<p>Quick reference / best practice links in human sounding short names, external references</p>
-	<ul>
-		<li>Adding New Layouts</li>
-		<li>Add new regions to the Drupal Block Structure</li>
-		<li>Bringing Templates from Pattern Lab to Drupal</li>
-		<li>Getting Pattern Lab to pick up new Scss/JS/Twig files.</li>
-		<li>Breakpoints for Responsive Image Styles</li>
-		<li>Adding new JS files/libraries</li>
-	</ul>
+	<div class="doc-section">
+		<h4 class="doc-section-title"></h4>
+		<div class="doc-section-inner">
+			<ul>
+				<li>Adding New Layouts</li>
+				<li>Add new regions to the Drupal Block Structure</li>
+				<li>Bringing Templates from Pattern Lab to Drupal</li>
+				<li>Getting Pattern Lab to pick up new Scss/JS/Twig files.</li>
+				<li>Breakpoints for Responsive Image Styles</li>
+				<li>Adding new JS files/libraries</li>
+			</ul>
+		</div>
+	</div>
 </div>
 
 
