--- a/web/themes/oc_patterns/components/_patterns/documentation/14-additional-resources/02-troubleshooting.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/14-additional-resources/02-troubleshooting.twig
@@ -2,6 +2,12 @@
 
 <div class="doc-text">
 	<p>Common D8 drush commands -- warning to always look at the site repo readme for site specific import/export/refresh commands.</p>
+	<div class="doc-section">
+		<h4 class="doc-section-title"></h4>
+		<div class="doc-section-inner">
+			<p></p>
+		</div>
+	</div>
 </div>
 
 
