--- a/web/themes/oc_patterns/components/_patterns/documentation/11-per-site-customization/00-site-specific-colors-&-fonts.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/11-per-site-customization/00-site-specific-colors-&-fonts.twig
@@ -1,7 +1,7 @@
 <a name="site-specific-colors" id="site-specific-colors"></a>
 
 <div class="doc-text">
-	<p>why we run them separate from others (why the colors_used is not used), why always variables.</p>
+	<p>why we run them separate from others (why the colors_used is not used), why always variables. !!! CKEditor bodyfont !!!</p>
 	<div class="doc-section">
 		<h4 class="doc-section-title"></h4>
 		<div class="doc-section-inner">
