Doc updates & spellchecking

--- a/web/themes/oc_patterns/components/_patterns/documentation/00-table-of-contents/00-sections.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/00-table-of-contents/00-sections.twig
@@ -36,7 +36,7 @@
 	<li><h5>Icons</h5>
 		<ol type="A">
 			<li><a href="#icons-svg">SVG</a></li>
-			<li><a href="#background-sizing">Background Autosizing</a></li>
+			<li><a href="#background-sizing">Background Auto-sizing</a></li>
 			<li><a href="#fa-integration">Font Awesome Integration</a></li>
 		</ol>
 	</li>
