--- a/web/themes/oc_patterns/components/_patterns/documentation/04-macros/00-macros-overview.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/04-macros/00-macros-overview.twig
@@ -6,7 +6,7 @@
 		<div class="doc-section-inner">
 			<p>Twig macros are very similar to Sass Mixins. They are a way for code to get passed from one template to another with the need to block inheritance or extensions (see <a href="#drupal-inheritance">Drupal Integration > Template Inheritance)</a>.</p>
 			<p>For OC Patterns, the true value in macros comes through in the passing of style classes through the macros into PL Twig and Drupal Twig templates to instantly change between style presets for various components.</p>
-			<p>Normally, Twig variables cannot transfer between PL and Drupal, nor between differnt Drupal entity templates.  Example: Block variables could not transfer into a Paragraphs template without either preprocessing or template inclusion and variable rewrites. This is stil true with even with the use of macros, but text variables can pass through the macro to act as css classes.  You could also use macros to create reusable code mixins.</p>
+			<p>Normally, Twig variables cannot transfer between PL and Drupal, nor between different Drupal entity templates.  Example: Block variables could not transfer into a Paragraphs template without either preprocessing or template inclusion and variable rewrites. This is still true with even with the use of macros, but text variables can pass through the macro to act as css classes.  You could also use macros to create reusable code mixins.</p>
 		</div>
 	</div>
 	<div class="doc-section">
