--- a/web/themes/oc_patterns/components/_patterns/documentation/09-drupal-integration/03-drupal-best-practices.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/09-drupal-integration/03-drupal-best-practices.twig
@@ -1,9 +1,9 @@
 <a name="drupal-best-practices" id="drupal-best-practices"></a>
 
 <div class="doc-text">
-	<p>When to bring files into drupal / when to drupal in pl (for new site elements)</p>
+	<p>When to bring files into Drupal / when to Drupal in pl (for new site elements)</p>
 	<div class="doc-section">
-		<h4 class="doc-section-title"></h4>
+		<h4 class="doc-section-title">Drupal Integration Best Practices</h4>
 		<div class="doc-section-inner">
 			<p></p>
 		</div>
