--- a/web/themes/oc_patterns/components/_patterns/documentation/06-sass/00-sass-overview.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/06-sass/00-sass-overview.twig
@@ -7,7 +7,7 @@
 			<p>OC Patterns uses <a href="https://sass-lang.com/" target="_blank">Sass</a> as our CSS preprocessor of choice. CSS Preprocessors allow a themer to write theming code using a specific syntax which the preprocessor then turns into browser-friendly CSS. Preprocessors help you write more efficient re-usable code with less repetition than regular CSS. They also allow the use of variables, functions and expressions not allowed in regular CSS.</p>
 			<p>OC Patterns uses Scss (Sassy CSS) files to hold its Sass markup. Scss is the main syntax of Sass as of version 3. OC Patterns do not use any Sass frameworks (i.e. Compass, Bourbon, Susy) but rather uses a multitude of mixins based on site needs. This allows for a lighter weight theme and more personal developer customization.</p>
 			<h5>OC Pattern SCSS Files</h5>
-			<p>Virtually every component in OC Patterns has a Scss file. Some have high level Scss files for the component level and then more specific Scss files for the component itself (example: _widgets.scss and _slideshow.scss). All Scss files should have a preceding underscore (<span class="code">_example.scss</span> to hide them from Pattern Lab. The CSS shet they get compiled to is visible to Pattern Lab so the individual Scss files should not be.</p>
+			<p>Virtually every component in OC Patterns has a Scss file. Some have high level Scss files for the component level and then more specific Scss files for the component itself (example: _widgets.scss and _slideshow.scss). All Scss files should have a preceding underscore (<span class="code">_example.scss</span> to hide them from Pattern Lab. The CSS sheet they get compiled to is visible to Pattern Lab so the individual Scss files should not be.</p>
 		</div>
 	</div>
 </div>
