--- a/web/themes/oc_patterns/components/_patterns/documentation/08-accessibility/02-aria.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/08-accessibility/02-aria.twig
@@ -4,7 +4,7 @@
 	<div class="doc-section">
 		<h4 class="doc-section-title">Aria Standards</h4>
 		<div class="doc-section-inner">
-			<p><a href="https://www.w3.org/WAI/intro/aria" target="_blank">Aria standards</a> should be used whenever possible. Drupal assigns many of these standards in the core templates and functionality but it is the responsibility of the developer to implement them when cusstomizing the site.</p>
+			<p><a href="https://www.w3.org/WAI/intro/aria" target="_blank">Aria standards</a> should be used whenever possible. Drupal assigns many of these standards in the core templates and functionality but it is the responsibility of the developer to implement them when customizing the site.</p>
 			<p>Aria Standards:
 				<ul>
 					<li>Roles for widget types</li>
