--- a/web/themes/oc_patterns/components/_patterns/documentation/00-table-of-contents/00-sections.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/00-table-of-contents/00-sections.twig
@@ -46,7 +46,7 @@
 			<li><a href="#sass-overview">Overview</a></li>
 			<li><a href="#sass-mixins">Mixins & Placeholders</a></li>
 			<li><a href="#sass-linting">Linting</a></li>
-			<li><a href="#sass-best-practice">Best Practices</a></li>
+			<li><a href="#sass-best-practices">Best Practices</a></li>
 		</ol>
 	</li>
 
