--- a/web/themes/oc_patterns/components/_patterns/documentation/10-custom-templates/02-twig-overview.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/10-custom-templates/02-twig-overview.twig
@@ -3,9 +3,19 @@
 <div class="doc-text">
 	<p>Generalities, link to my blog posts, some tips and tricks (maybe), commenting</p>
 	<div class="doc-section">
-		<h4 class="doc-section-title"></h4>
+		<h4 class="doc-section-title">Twig Overview</h4>
 		<div class="doc-section-inner">
-			<p></p>
+			{% set execute = '{% %}' %}
+			{% set expression = '{{ }}' %}
+			{% set comment = '{# #}' %}
+			{% set commentEx = '{# My great Twig block does this... #}' %}
+			{% set expressionEx ="{{ content.field_background_colors.0.value|clean_class }}" %}
+			{% set executeEx = '{% if content.field_background_colors.0.value|clean_class == "white" %} is-white {% endif %}'%}
+			<p>Drupal 8 and Pattern Lab both use Twig templates. Twig is a PHP templating engine which is part of the <a href="https://symfony.com/" target="_blank">Symfony</a> framework. Twig is sort of like the Sass of PHP.</p>
+			<p>Twig has thee main delimiters that are used to build code. You can write expressions (variable outputs, strings, Twig functions, etc) using <span class="code">{{ expression }}</span>. You can execute statements with tags such as if, for (loops) and set (define variable) using <span class="code">{{ execute }}</span>. Comments are adding using <span class="code">{{ comment }}</span>. Whenever using a Twig delimiter in a template, it is preferable to separate the opening and closing part of the delimiter from the content using a space on each side: <span class="code">{{ expressionEx }}</span> or <span class="code">{{ executeEx }}</span></p>
+			<p>Twig templates should be commented use descriptive comments (<span class="code">{{ commentEx }}</span></span>) the same as you would JS or Scss to explain your code to other developers (or future you from 6 months from now). Template name comments are not needed since templates are not compiled into single files like Scss. Component section name comments are recommended when using <a href="https://twig.symfony.com/doc/2.x/functions/block.html" target="_blank">Twig blocks</a>.</p>
+			<p>Twig Tweak (maybe other extension library helper module that added the random function used in either wilder or MPLS).</p>
+			<p>References: Blog Posts, Twig Documentation</p>
 		</div>
 	</div>
 </div>
