--- a/web/themes/oc_patterns/components/_patterns/documentation/00-table-of-contents/00-sections.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/00-table-of-contents/00-sections.twig
@@ -116,6 +116,7 @@
 			<li><a href="#quick-reference">Quick Reference</a></li>
 			<li><a href="#drush-commands">Drush Commands</a></li>
 			<li><a href="#trouble">Troubleshooting</a></li>
+			<li><a href="#site-building">Site Building Quick Guide</a></li>
 		</ol>
 	</li>
 
