--- a/web/themes/oc_patterns/components/_patterns/00-base/global/01-colors/_color-vars.scss
+++ b/web/themes/oc_patterns/components/_patterns/00-base/global/01-colors/_color-vars.scss
@@ -1,4 +1,4 @@
-///base colors
+/* base colors */
 $body       : #4d4e4e;
 $lightBlue : #9acde8;
 $blue       : #35729b;
@@ -19,25 +19,25 @@ $highlighter: #f2dc26;
 $warning    : #dd241b;
 
 
-///transparents
+/* transparents */
 $transWhite  : rgba(255,255,255,0.7);
 $transBlack  : rgba(35,35,35,0.7);
 $imgOverlay      : rgba(35,35,35,0.4);
 
 
-///Randos
+/* Randos */
 $greenGood  : #218d00;
 $redBad     : #cd0210;
 $unpub : #fff4fa;
 $unpubDark : #fdd5dd;
 
 
-///Client Colors
+/*  Client Colors */
 $siteBack: #f6f6f6;
 $borderRule: #222222;
 
 
-///Link COLORS
+/* Link COLORS */
 $link        : #d52d00;
 $activeLink : #6a2600;
 $hoverLink  : #6a2600;
@@ -45,5 +45,5 @@ $buttonBack : #efb61b;
 $buttonBackHover: #c84700; 
 
 
-//PL colors
+/* PL colors */
 $codeString   :  #017aa2;
