--- a/web/themes/oc_patterns/components/_patterns/00-base/global/02-fonts/_font-vars.scss
+++ b/web/themes/oc_patterns/components/_patterns/00-base/global/02-fonts/_font-vars.scss
@@ -1,6 +1,6 @@
 ///font families
 $header      : "Open Sans", Helvetica, Arial, sans-serif;
-$display-header      : "Raleway", Helvetica, Arial, sans-serif;
+$display-header      : "Open Sans", Helvetica, Arial, sans-serif;
 $bodyfont         : "Open Sans", Helvetica, Arial, sans-serif;
 $serif        : Georgia, "Times New Roman", Times, serif;
 
