--- a/web/themes/oc_patterns/components/_patterns/documentation/12-admin-theming/01-paragraph-icons.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/12-admin-theming/01-paragraph-icons.twig
@@ -1,11 +1,11 @@
 <a name="admin-paragraphs" id="admin-paragraphs"></a>
 
 <div class="doc-text">
-	<p>Location of icons files in gdrive, custom node theming for new widget icons, dev config (link to dev-config section).</p>
 	<div class="doc-section">
-		<h4 class="doc-section-title"></h4>
+		<h4 class="doc-section-title">Paragraph Admin Icons</h4>
 		<div class="doc-section-inner">
-			<p></p>
+			<p>Each paragraph button must be given an icon and themed in the OC Custom module custom-node.css file. The icon is stored in the OC Custom module /icons/svg folder. Icon ai files are stored in the Electric Citizen Google Drive zFront End Elements folder. Use the widget-admin-icons.ai file to design the icon and the widget-icons-svg.ai file to size it and export it to the custom module icons folder. The buttons are themed and named based on the paragraph bundle name following the conventions already in use in OC Custom custom-node.css.</p>
+			<p>Paragraph bundles also need to have the admin icon uploaded to both your local site and the current non-local development platform. This can be done by editing the paragraph bundle and uploading the icon in the field provided. Your local settings should then be immediately exported to the development environment. This must be done because these file icons are considered both content and configuration so the files must be added in both areas to get the correct file number in config—which is then exported to sync the config so the icon is properly stored in both places.</p>
 		</div>
 	</div>
 </div>
