--- a/web/themes/oc_patterns/components/_patterns/documentation/14-additional-resources/03-site-building-quick-guide.twig
+++ b/web/themes/oc_patterns/components/_patterns/documentation/14-additional-resources/03-site-building-quick-guide.twig
@@ -3,7 +3,7 @@
 <div class="doc-text">
 	<p>Quick reference to site building (media, cts, panelizer, url patterns, views, paragraphs (including permissions, icons, dev icons, etc).</p>
 	<div class="doc-section">
-		<h4 class="doc-section-title"></h4>
+		<h4 class="doc-section-title">Site Building Quick Reference</h4>
 		<div class="doc-section-inner">
 			
 		</div>
